# ChangeLog for x11-terms/hanterm
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/hanterm/ChangeLog,v 1.2 2002/07/11 03:55:14 jayskwak Exp $

*hanterm-3.1.6-r1 (11 Jul 2002)

  11 Jul 2002; Jays Kwak <jayskwak@gentoo.org> hanterm-3.1.6-r1 :
  Modified default color and fonts in Hanterm config file. Original Hanterm
  file renamed Hanterm.orig
  
*<PACKAGE_NAME>-<PACKAGE_VERSION>-<PACKAGE_RELEASE> (DD MMM YYYY)

  01 Feb 2002; G.Bevin <gbevin@gentoo.org> skel.ChangeLog: This changelog is
  targetted to users. This means that the comments should be well explained and
  written in clean English. 
 
-- Explanation of ChangeLog format:
 
  Every new version or revision of the package should be marked by a '*'
  seperator line as above. Changes since the last revision have to be added to
  the top of the file, underneath the initial copyright and cvs header
  comments, in exactly the same format as this comment.
  
  This means that you start with header line that has the following format,
  indented two spaces:
  
  DD MMM YYYY; your_name <your_email> changed_file1, changed_file2: Your
  explanation should follow. It should be indented and wrapped at a line width
  of 80 characters.  The changed_files can be omitted if they are obvious; for
  example, if you are only modifying the .ebuild file and committing a new rev
  of a package.  Any details about what exactly changed in the code should be
  added as a message when the changes are committed to cvs, not in this file.