@@ -1,6 +1,11 @@
 # ChangeLog for x11-terms/hanterm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/hanterm/ChangeLog,v 1.2 2002/07/11 03:55:14 jayskwak Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/hanterm/ChangeLog,v 1.3 2002/07/24 01:39:14 jayskwak Exp $
+
+*hanterm-3.1.6-r2 (24 Jul 2002)
+
+  24 Jul 2002; Jays Kwak <jayskwak@gentoo.org> hanterm-3.1.6-r2 :
+  Hanterm config file bug fixed.
 
 *hanterm-3.1.6-r1 (11 Jul 2002)
 
